# PROtein_folder

./: .gitignore  .hqiv_native_osh_grade.json  404.html  Dockerfile  Dockerfile.tpu  GOVERNMENT_USE.md  README.md  casp_server.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_hke_assembly_two_chains.py  run_pending_assembly_job.py
.casp_grade_cache/: 8qpq.cif  known_targets_index.txt
.casp_grade_outputs/: casp_fold_grade_summary.json
.casp_grade_outputs/iter_small/: iter_small_history.json
.github/workflows/: ci.yml  docs.yml
.hypothesis/constants/: 03c7a4ec4d49a21b  0e00381558e3a94f  1a30ca5f9c790823  1b78cba09ee09539  1bb24fd007622975  1d82cf904b2f162a  2323f24d1b7f9928  2923e1da2d14f07e  (+32 more)
.lean_qc_batch/: 1CRN.pdb.side_by_side_lean_qc.json  1L2Y.pdb.side_by_side_lean_qc.json  1L2Y_trpcage_20ca.side_by_side_lean_qc.json  1UAO.pdb.angmix0.side_by_side_lean_qc.json  1UAO.pdb.side_by_side_lean_qc.json  1VII.pdb.side_by_side_lean_qc.json  4INS.pdb.angmix0.side_by_side_lean_qc.json  4INS.pdb.side_by_side_lean_qc.json
api/: index.html
contributing/: index.html
docs/: api.md  benchmarks.md  contributing.md  em_field_pipeline.md  examples.md  government-use.md  how-it-works.md  index.md  installation.md  live-demo.md  theory.md  tunnel_temperature_folding.md
em_field_pipeline/: index.html
examples/: index.html
how-it-works/: index.html
proteins/: 7K00_tunnel_field.npz
scripts/: analyze_fold_mismatch.py  benchmark_fold_modes.py  chignolin_ca_then_fullheavy_spread.py  compare_naf_casp_to_experiment.py  crambin_stepwise_side_by_side.py  crambin_stepwise_tunnel_drive.py  fetch_very_short_reference_pdbs.py  grade_hqiv_native_osh_targets.py  iterate_small_targets.py  optimize_weekly_targets.py  quantum_osh_side_by_side.py  reset_failed_jobs.py  run_casp_fold_and_grade.py  run_pipeline_grade.py  run_pipeline_local.py  seek_chignolin_backbone_osh.py  seek_chignolin_ca_osh.py  side_by_side_lean_qc.py  side_by_side_minimum.py  validate_cameo_style_ligand_pdbs.py  validate_casp_lean_pipeline.py  validate_multichain_ligand_casp_smoke.py  validate_qc_ligand_published_pdbs.py
search/: search_index.json
site/: index.html  objects.inv  sitemap.xml
tests/: _legacy_assembly_script.py  test_assembly_energy_decomposition.py  test_co_translational_tunnel.py  test_collective_kink_ca.py  test_collective_modes_scalars.py  test_hqiv_long_range_lean_parity.py  test_hypothesis_geometry.py  test_lean_ribosome_tunnel_pipeline.py  test_osh_oracle_folding.py  test_protein_qc_refinement.py  test_side_by_side_lean_qc.py  test_very_short_fold_targets.py
theory/: index.html
(+78 files in other folders)
