[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-folder"
version = "0.1.0"
description = "First-principles protein folding from HQIV physics (no ML, no empirical force fields). MIT licensed with an explicit government-use restriction — see GOVERNMENT_USE.md and project metadata."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Steven Ettinger", email = "steven@disregardfiat.tech" },
]
keywords = [
  "protein-folding",
  "HQIV",
  "structural-biology",
  "physics",
  "first-principles",
  "horizon",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "pyhqiv",
]

[project.optional-dependencies]
full = [
  "matplotlib>=3.5",
]
tpu = [
  "jax>=0.9",
  "jaxlib>=0.9",
]
grading = [
  "pandas>=1.3",
]
demo = [
  "streamlit>=1.28",
  "flask>=2.0",
  "gunicorn>=21.0",
]
dev = [
  "matplotlib>=3.5",
  "pandas>=1.3",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.92",
  "mypy>=1.8",
  "ruff>=0.3",
  "pre-commit>=3.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/disregardfiat/protein_folder"
Documentation = "https://disregardfiat.github.io/protein_folder/"
Repository = "https://github.com/disregardfiat/protein_folder"
Issues = "https://github.com/disregardfiat/protein_folder/issues"
"Formal verification (Lean)" = "https://github.com/disregardfiat/hqiv-lean"
"HQIV paper (Zenodo)" = "https://doi.org/10.5281/zenodo.18794889"

[project.scripts]
protein-folder-streamlit = "horizon_physics.proteins.demo_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --import-mode=importlib"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["horizon_physics.proteins"]
warn_unused_ignores = true
ignore_missing_imports = true
